# CosyVoice

./: README_ts.md  docker-compose.yaml  pyproject.toml  requirements.txt  test.py  webui.py
docker/: Dockerfile.uv
presentation/routers/v1/: __init__.py  voices.py
presentation/routers/v1/audio/: __init__.py  speech.py
presentation/routers/v1/audio/components/: speech_generators.py  speech_instances.py
