[project]
name = "cosyvoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "conformer==0.3.2",
    "deepspeed==0.14.2",
    "diffusers==0.29.0",
    "gdown==5.1.0",
    "gradio==5.4.0",
    # "grpcio==1.57.0",
    # "grpcio-tools==1.57.0",
    "hydra-core==1.3.2",
    "HyperPyYAML==1.2.2",
    "inflect==7.3.1",
    "librosa==0.10.2",
    "lightning==2.2.4",
    "matplotlib==3.7.5",
    "modelscope==1.15.0",
    "networkx==3.1",
    "omegaconf==2.3.0",
    "onnx==1.16.0",
    "onnxruntime-gpu==1.18.0",
    "onnxruntime==1.18.0",
    "openai-whisper==20231117",
    "protobuf==4.25",
    "pydantic==2.7.0",
    "pyworld==0.3.4",
    "rich==13.7.1",
    "soundfile==0.12.1",
    # "tensorboard==2.14.0",
    # "tensorrt-cu12==10.0.1",
    # "tensorrt-cu12-bindings==10.0.1",
    # "tensorrt-cu12-libs==10.0.1",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "transformers==4.40.1",
    "uvicorn==0.30.0",
    "wget==3.2",
    "fastapi==0.115.6",
    "fastapi-cli==0.0.4",
    # "WeTextProcessing==1.0.3", # # 因為pynini, No module named 'Cython'會有問題, 從此處移除, 在最後pip
]


[tool.uv.sources]
torch = { index = "torch-cu121" }
onnxruntime-gpu = { index = "aiinfra" }

[[tool.uv.index]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "aiinfra"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
explicit = true
